--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,39 +3,25 @@
 <%- include('./partials/header') %>
 <body>
 <%- include('./partials/navbar')  %>
-<div class="blog-content-container">
-
+    <h1>This is the Blog Space</h1>
     <div class="blog-space-container">
-            <h1>This is the Blog Space</h1>
-        <% if (post.length > 0) { %>
-            <% post.forEach(function(postItem) { %>
-                <div class="post-container">
-                    <div class="container">
-                        <h2><%= postItem.title %></h2>
-                        <p><%= postItem.content %></p><br>
-                        <a href="/edit/<%= postItem.id %>"><button class="edit">Edit</button></a>
-                        <form action="/delete/<%= postItem.id %>" method="post" style="display:inline;">
-                            <button class="delete" type="submit">Delete</button>
-                        </form>
-                    </div>
-                </div>
-            <% }); %>
-        <% } else { %>
-            <p>No blog posts found.</p>
-        <% } %>
-    </div>
-    
-    
-    <div class="form-container">
-        <form action="/create" method="post">
-            <label for="title">Title</label>
-            <input type="text" name="title" id="title" placeholder="Enter title" required>
-            
-            <label for="content">Content</label>
-            <textarea name="content" id="content" placeholder="Enter content" required></textarea>
-            
-            <input type="submit" value="Submit">
-        </form>
+        <div class="post-container">
+            <% if (post.length > 0) { %>
+                <% post.forEach(function(postItem) { %>
+            <div class="container">
+                <h2><%= postItem.title %></h2>
+                <p><%= postItem.content %></p><br>
+                <a href="/edit/<%= postItem.id %>"><button class="edit">Edit</button></a>
+                <form action="/delete/<%= postItem.id %>" method="post" style="display:inline;">
+                    <button class="delete" type="submit">Delete</button>
+                </form>
+            </div><br>
+                    <% }); %>
+                <% } else { %>
+                    <p>No blog posts found.</p>
+                <% } %>
+                    
+        </div>
     </div>
 </div>
 <%- include('./partials/footer') %>    
