--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
-    <h3>BlogPost</h3>
+    <h3><a href="/">BlogPost</a></h3>
     <ul>
         <li><a href="/create">Create</a></li>
     </ul>
